--- a/wiki/PageName.wiki
+++ b/wiki/PageName.wiki
@@ -1,15 +1,4 @@
 #summary One-sentence summary of this page.
 
-= Introduction =
-
-Add your content here.
-
-
-= Details =
-
-Add your content here.  Format your content with:
-  * Text in *bold* or _italic_
-  * Headings, paragraphs, and lists
-  * Automatic links to other wiki pages
-
+= Screenshots =
 https://neutrinohd2.googlecode.com/svn/wiki/images/nhd2-screenshots/channellist.png
