Edited wiki page how_to_build_NHD2_for_x86 through web user interface.

--- a/wiki/how_to_build_NHD2_for_x86.wiki
+++ b/wiki/how_to_build_NHD2_for_x86.wiki
@@ -2,20 +2,20 @@
 
 = HowTO =
 
-apt-get install autoconf libtool libavformat-dev libswscale-dev g++ libopenthreads-dev libglew-dev freeglut3-dev libao-dev libcurl4-gnutls-dev libfreetype6-dev libid3tag0-dev libmad0-dev libogg-dev libpng12-dev liblua5.2-dev libgif-dev libjpeg-turbo8-dev libvorbis-dev
+apt-get install autoconf libtool libavformat-dev libswscale-dev g++ libopenthreads-dev libglew-dev freeglut3-dev libao-dev libcurl4-gnutls-dev libfreetype6-dev libid3tag0-dev libmad0-dev libogg-dev libpng12-dev liblua5.2-dev libgif-dev libjpeg-turbo8-dev libvorbis-dev.
 
-mkdir neutrino-pc
-cd neutrino-pc
-wget https://neutrinohd2.googlecode.com/svn/ ... ile.native
-rename or copy Makefile.native to Makefile
-- to build neutrino:
-make neutrino
+* mkdir neutrino-pc
+* cd neutrino-pc
+* wget https://neutrinohd2.googlecode.com/svn/ ... ile.native
+* rename or copy Makefile.native to Makefile
+= to build neutrino =
+* make neutrino
 
-- to update neutrino Source Code:
-make neutrino-update
+= to update neutrino Source Code =
+* make neutrino-update
 
-- to clean neutrino build:
-make neutrino-clean
+= to clean neutrino build =
+* make neutrino-clean
 
-- to distclean neutrino build
-make neutrino-distclean
+= to distclean neutrino build =
+* make neutrino-distclean
