--- a/wiki/NHD2_screenshots.wiki
+++ b/wiki/NHD2_screenshots.wiki
@@ -1,6 +1,7 @@
 #summary some screenshots from NHD2 GUI.
 
 = Screenshots =
+Eventlist (EPG)
 https://neutrinohd2.googlecode.com/svn/wiki/images/nhd2-screenshots/01.png
 
 https://neutrinohd2.googlecode.com/svn/wiki/images/nhd2-screenshots/02.png
