--- a/wiki/how_to_build_NHD2_for_x86.wiki
+++ b/wiki/how_to_build_NHD2_for_x86.wiki
@@ -4,11 +4,10 @@
 
 apt-get install autoconf libtool libavformat-dev libswscale-dev g++ libopenthreads-dev libglew-dev freeglut3-dev libcurl4-gnutls-dev libfreetype6-dev libid3tag0-dev libmad0-dev libogg-dev libpng12-dev libgif-dev libjpeg-turbo8-dev libvorbis-dev.
 
-mkdir neutrino-pc
-== ==
+== check out makefiles ==
+svn checkout http://neutrinohd2.googlecode.com/svn/trunk neutrino-pc
+= =
 cd neutrino-pc
-== ==
-wget https://neutrinohd2.googlecode.com/svn/ ... ile.native
 == ==
 rename or copy Makefile.native to Makefile
 == ==
