--- a/wiki/how_to_build_NHD2_for_x86.wiki
+++ b/wiki/how_to_build_NHD2_for_x86.wiki
@@ -2,7 +2,8 @@
 
 = HowTO =
 
-apt-get install autoconf libtool libavformat-dev libswscale-dev g++ libopenthreads-dev libglew-dev freeglut3-dev libcurl4-gnutls-dev libfreetype6-dev libid3tag0-dev libmad0-dev libogg-dev libpng12-dev libgif-dev libjpeg-turbo8-dev libvorbis-dev.
+apt-get install autoconf libtool libavformat-dev libswscale-dev g++ libopenthreads-dev libglew-dev freeglut3-dev libcurl4-gnutls-dev libfreetype6-dev libid3tag0-dev libmad0-dev libogg-dev libpng12-dev libgif-dev libjpeg-turbo8-dev libvorbis-dev libgstreamer0.10-dev libgstreamer-plugins-base0.10-dev libblkid-dev libflac-dev 
+
 
 == check out makefiles ==
 svn checkout http://neutrinohd2.googlecode.com/svn/trunk neutrino-pc
