Edited wiki page how_to_build_NHD2_for_x86 through web user interface.

--- a/wiki/how_to_build_NHD2_for_x86.wiki
+++ b/wiki/how_to_build_NHD2_for_x86.wiki
@@ -15,6 +15,9 @@ rename or copy Makefile.native to Makefile
 = to build neutrino =
 make neutrino
 
+= to start neutrino =
+make run
+
 = to update neutrino Source Code =
 make neutrino-update
 
