--- a/wiki/how_to_build_NHD2_for_x86.wiki
+++ b/wiki/how_to_build_NHD2_for_x86.wiki
@@ -27,3 +27,18 @@ make neutrino-clean
 
 = to distclean neutrino build =
 make neutrino-distclean
+
+= mapped keyboard keys =
+ESC = HOME KEY
+F1 = RED KEY
+F2 = GREEN KEY
+F3 = YELLOW KEY
+F4 = BLUE KEY
+
+F5 = PLAY KEY
+F6 = STOP KEY
+F7 = PAUSE KEY
+F8 = FORWARD KEY
+F9 = BACKWARD KEY
+M = MENU KEY
+- = MUTE KEY
