Edited wiki page build_nhd2_in_openpli_2 through web user interface.

--- a/wiki/build_nhd2_in_openpli_2.wiki
+++ b/wiki/build_nhd2_in_openpli_2.wiki
@@ -9,16 +9,15 @@ svn checkout http://neutrinohd2.googlecode.com/svn/trunk neutrino-mipsel
 cd neutrino-mipsel
 
 = =
-rename or copy Makefile.example to Makefile
-== ==
+
 = to build neutrino =
-make neutrino
+make -f Makefile.example neutrino
 
 = to update neutrino Source Code =
-make neutrino-update
+make -f Makefile.example neutrino-update
 
 = to clean neutrino build =
-make neutrino-clean
+make -f Makefile.example neutrino-clean
 
 = to distclean neutrino build =
-make neutrino-distclean
+make -f Makefile.example neutrino-distclean
