--- a/wiki/nhd2_openpli30.wiki
+++ b/wiki/nhd2_openpli30.wiki
@@ -2,13 +2,15 @@ based on opennhd2-r64.12 from scp
 
 = MAKE: =
 for oe-alliance:
+==
 cd /(oe-alliance-path)/build-enviroment/meta-oe-alliance
 ==
 svn co http://neutrinohd2.googlecode.com/svn/branches/recipes-neutrino recipes-neutrino
 ==
 cd (oe-alliance-path)/build-enviroment/builds/(DISTRO)/(MACHINE)
-
+==
 for openpli3.0:
+==
 cd (openpli30-path)/openpli-oe-core/meta-openpli
 ==
 svn co http://neutrinohd2.googlecode.com/svn/branches/recipes-neutrino recipes-neutrino
@@ -20,10 +22,13 @@ cd (openpli30-path)/openpli-oe-core/build-(MACHINE)
 bitbake neutrino
 ==
 result can be found here:
+==
 for oe-alliance:
+==
 (oe-alliance-path)/build-enviroment/builds/(DISTRO/(MACHINE)/tmp/deploy/ipk/mips32el/neutrino_svn(svnrevision)-r64.12_mips32el.ipk
-
+==
 for openpli3.0:
+==
 (openpli30-path)/openpli-oe-core/build-MACHINE/tmp/deploy/ipk/mips32el/neutrino_svn(svnrevision)-r64.12_mips32el.ipk
 
 = INSTALL: =
@@ -31,15 +36,18 @@ for quic test
 ==
 - copy neutrino_svn(actuall svn rev)-r64.12_mips32el.ipk to /tmp
 opkg install /tmp/neutrino_svn(actuall svn rev)-r64.12_mips32el.ipk
-
+==
 -librtmp:
 copy librtmp0_2.4+git484+df6c518-r1_mips32el.ipk to /tmp
+==
 opkg update && opkg install --force-overwrite /tmp/librtmp0_2.4+git484+df6c518-r1_mips32el.ipk[/code]
-
-kill enigma2
+==
+kill enigma2:
+==
 init 2
-
+==
 start neutrino
+==
 neutrino &
 
 = CAUTION: =
