Edited wiki page nhd2_openpli30 through web user interface.

--- a/wiki/nhd2_openpli30.wiki
+++ b/wiki/nhd2_openpli30.wiki
@@ -1,4 +1,4 @@
-#summary building NHD2 for mipsel platforms with openpli3.0 or oe-alliance.
+#summary building neutrino for mipsel platforms with openpli3.0 or oe-alliance.
 
 based on opennhd2-r64.12 from scp
 
