Edited wiki page how_to_build_NHD2_for_x86 through web user interface.

--- a/wiki/how_to_build_NHD2_for_x86.wiki
+++ b/wiki/how_to_build_NHD2_for_x86.wiki
@@ -1,4 +1,4 @@
-#summary building NHD2 for generic x86.
+#summary building neutrino for generic x86.
 at the first many thanks to seife for the Makefile.
 
 = HowTO =
