Edited wiki page build_neutrinohd2_for_sh4_pltatforms through web user interface.

--- a/wiki/build_neutrinohd2_for_sh4_pltatforms.wiki
+++ b/wiki/build_neutrinohd2_for_sh4_pltatforms.wiki
@@ -1,4 +1,4 @@
-#building neutrino for sh4 based STB with tdt/max-tdt build.
+#summary building neutrino for sh4 based STB with tdt/max-tdt build.
 
 =checkout=
 clone tdt master or max-tdt git (max-tdt is preferred)
@@ -17,4 +17,3 @@ make yaud-neutrino-hd2-exp
 
 for more inforamtion about tdt-git and max-tdt git take a look at tdt-wiki
 https://gitorious.org/open-duckbox-project-sh4/pages/Home
-
