--- a/wiki/build_neutrinohd2_for_sh4_pltatforms.wiki
+++ b/wiki/build_neutrinohd2_for_sh4_pltatforms.wiki
@@ -1,10 +1,10 @@
 #summary building neutrino for sh4 based STB with tdt/max-tdt build.
 
-=checkout=
+=CHECKOUT=
 clone tdt master or max-tdt git (max-tdt is preferred)
 ==
 clone git git://gitorious.org/open-duckbox-project-sh4/max-tdt.git
-==
+= PREPARE=
 change to /max-tdt/tdt/cvs/cdk
 ==
 run make.sk
@@ -12,7 +12,7 @@ run make.sk
 ./make.sh
 ==
 choose your preferred build option (and inkl. boxtype)
-==
+=MAKE=
 make yaud-neutrino-hd2-exp
 
 for more inforamtion about tdt-git and max-tdt git take a look at tdt-wiki
